--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
       <input type="text" id="jogador1" placeholder="Nome do Jogador 1" />
       <input type="text" id="jogador2" placeholder="Nome do Jogador 2" />
       <button onclick="iniciar()">Começar</button>
+      <div class="creditos">
+  Criado por Gustavo Campos<br>
+  Pix: (31)99998-6947
+</div>
     </section>
 
     <section id="nivel-section" style="display:none;">
@@ -24,6 +28,10 @@
         <button onclick="selecionarNivel('😏')">😏</button>
         <button onclick="selecionarNivel('🔥')">🔥</button>
       </div>
+      <div class="creditos">
+  Criado por Gustavo Campos<br>
+  Pix: (31)99998-6947
+</div>
     </section>
 
     <section id="jogo-section" style="display:none;">
@@ -50,6 +58,10 @@
 
       <div id="placar" class="placar"></div>
      <button id="btn-voltar-discreto" class="btn-voltar" onclick="voltarParaSelecaoDeNivel()" style="display:none;">↩ Níveis</button>
+     <div class="creditos">
+  Criado por Gustavo Campos<br>
+  Pix: (31)99998-6947
+</div>
     </section>
 
     <button id="btn-reiniciar" style="display: none;" onclick="reiniciarJogo()">Reiniciar</button>
