--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
       <h2>Escolha o Nível</h2>
       <div class="nivel-btns">
         <button onclick="selecionarNivel('😄')">😄</button>
-        <button onclick="selecionarNivel('😏')">😏</button>
-        <button onclick="selecionarNivel('🔥')">🔥</button>
+        <button onclick="selecionarNivel('😏')">🔥</button>
+        <button onclick="selecionarNivel('🔥')">😈</button>
       </div>
       <div class="creditos">
   Criado por Gustavo Campos<br>
@@ -67,6 +67,10 @@
     <button id="btn-reiniciar" style="display: none;" onclick="reiniciarJogo()">Reiniciar</button>
     </div>
   </div>
-<script src="script.js"></script>
+
+  <script src="dados-prendas.js"></script>
+  <script src="dados-perguntas.js"></script>
+  <script src="script.js"></script>
+  
 </body>
 </html>
