--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 </div>
     </section>
 
-    <button id="btn-reiniciar" style="display: none;" onclick="reiniciarJogo()">Reiniciar</button>
+    <button id="btn-reiniciar" style="display: none;" onclick="reiniciarJogo()">Jogar novamente</button>
     </div>
   </div>
 
