--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>Verdade ou Consequência</h1>
+    <h1>teste</h1>
 
     <section id="cadastro-section">
       <input type="text" id="jogador1" placeholder="Nome do Jogador 1" />
@@ -17,7 +17,6 @@
       <button onclick="iniciar()">Começar</button>
       <div class="creditos">
   Criado por Gustavo Campos<br>
-  Pix: (31)99998-6947
 </div>
     </section>
 
@@ -27,10 +26,10 @@
         <button onclick="selecionarNivel('😄')">😄</button>
         <button onclick="selecionarNivel('😏')">🔥</button>
         <button onclick="selecionarNivel('🔥')">😈</button>
+        <button onclick="ativarModoSoVerdade()">🕵️</button>
       </div>
       <div class="creditos">
   Criado por Gustavo Campos<br>
-  Pix: (31)99998-6947
 </div>
     </section>
 
@@ -38,8 +37,8 @@
       <div id="nivel-escolhido"></div>
       <div id="vez-do-jogador"></div>
    <div id="escolha-container" style="display: none;" class="escolha-container">
-  <div class="opcao" id="opcao-verdade">Verdade</div>
-  <div class="opcao" id="opcao-consequencia">Consequência</div>
+  <div class="opcao" id="opcao-verdade">1</div>
+  <div class="opcao" id="opcao-consequencia">2</div>
 </div>
 
       <div id="animacao-resultado" class="animacao-resultado hidden"></div>
@@ -55,22 +54,37 @@
 <button id="btn-nao-cumpriu">Não Cumpriu</button>
 
       </div>
-
       <div id="placar" class="placar"></div>
      <button id="btn-voltar-discreto" class="btn-voltar" onclick="voltarParaSelecaoDeNivel()" style="display:none;">↩ Níveis</button>
      <div class="creditos">
   Criado por Gustavo Campos<br>
-  Pix: (31)99998-6947
 </div>
     </section>
-
+    
+   
+    <section id="modo-verdade-section" style="display:none;">
+  <div id="vez-simples"></div>
+  <div id="pergunta-simples"></div>
+  <button id="btn-sortear-verdade" onclick="sortearVerdadeSimples()">Sortear Verdade</button>
+  <button id="btn-voltar" onclick="voltarParaNiveis()">Voltar</button>
+   <div class="creditos">
+  Criado por Gustavo Campos<br>
+</div>
+</section>
+<div id="feedback-container" style="display: none; margin-top: 10px;">
+  <button id="curtirBtn">👍</button>
+  <button id="naoCurtirBtn">👎</button>
+  <span id="feedback-animacao" style="font-size: 2rem; margin-left: 10px;"></span>
+</div>
     <button id="btn-reiniciar" style="display: none;" onclick="reiniciarJogo()">Jogar novamente</button>
     </div>
   </div>
-
+<button onclick="mostrarPlanilhaFeedback()" style="display:none;" id="btn-planilha-secreta">Ver Feedbacks</button>
   <script src="dados-prendas.js"></script>
   <script src="dados-perguntas.js"></script>
   <script src="script.js"></script>
-  
+  <script src="feedback.js"></script>
+  <script src="https://cdn.sheetjs.com/xlsx-latest/package/dist/xlsx.full.min.js"></script>
 </body>
 </html>
+
