--- a/index.html
+++ b/index.html
@@ -3,88 +3,64 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>V & C</title>
+  <title>V & D</title>
   <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@600&display=swap" rel="stylesheet">
 </head>
 <body>
   <div class="container">
-    <h1>teste</h1>
-
+    <h1>V e C</h1>
     <section id="cadastro-section">
       <input type="text" id="jogador1" placeholder="Nome do Jogador 1" />
       <input type="text" id="jogador2" placeholder="Nome do Jogador 2" />
       <button onclick="iniciar()">Começar</button>
-      <div class="creditos">
+       <div class="creditos">
   Criado por Gustavo Campos<br>
 </div>
     </section>
-
     <section id="nivel-section" style="display:none;">
       <h2>Escolha o Nível</h2>
       <div class="nivel-btns">
-        <button onclick="selecionarNivel('😄')">😄</button>
-        <button onclick="selecionarNivel('😏')">🔥</button>
-        <button onclick="selecionarNivel('🔥')">😈</button>
-        <button onclick="ativarModoSoVerdade()">🕵️</button>
+    <button onclick="selecionarNivel('facil')" aria-label="Nível fácil">😄</button>
+    <button onclick="selecionarNivel('medio')" aria-label="Nível médio">🔥</button>
+    <button onclick="selecionarNivel('dificil')" aria-label="Nível difícil">😈</button>
+    <button onclick="ativarModoSoVerdade()" aria-label="Modo só verdade">🕵️</button>
       </div>
-      <div class="creditos">
+       <div class="creditos">
   Criado por Gustavo Campos<br>
 </div>
     </section>
-
     <section id="jogo-section" style="display:none;">
       <div id="nivel-escolhido"></div>
       <div id="vez-do-jogador"></div>
    <div id="escolha-container" style="display: none;" class="escolha-container">
-  <div class="opcao" id="opcao-verdade">1</div>
-  <div class="opcao" id="opcao-consequencia">2</div>
+  <div class="opcao" id="opcao-verdade">V</div>
+  <div class="opcao" id="opcao-consequencia">D</div>
 </div>
-
-      <div id="animacao-resultado" class="animacao-resultado hidden"></div>
-
       <button id="btn-roleta" onclick="girarRoleta()">Sortear</button>
-      
-
       <div id="mensagem" class="mensagem"></div>
       <div id="resultado" class="resultado"></div>
-
       <div id="avaliacao" style="display:none;">
        <button id="btn-cumpriu">Cumpriu</button>
 <button id="btn-nao-cumpriu">Não Cumpriu</button>
-
       </div>
       <div id="placar" class="placar"></div>
      <button id="btn-voltar-discreto" class="btn-voltar" onclick="voltarParaSelecaoDeNivel()" style="display:none;">↩ Níveis</button>
-     <div class="creditos">
+      <div class="creditos">
   Criado por Gustavo Campos<br>
 </div>
     </section>
-    
-   
+    <div id="animacao-resultado" class="animacao-resultado hidden"></div>
     <section id="modo-verdade-section" style="display:none;">
-  <div id="vez-simples"></div>
+
   <div id="pergunta-simples"></div>
   <button id="btn-sortear-verdade" onclick="sortearVerdadeSimples()">Sortear Verdade</button>
   <button id="btn-voltar" onclick="voltarParaNiveis()">Voltar</button>
-   <div class="creditos">
-  Criado por Gustavo Campos<br>
-</div>
 </section>
-<div id="feedback-container" style="display: none; margin-top: 10px;">
-  <button id="curtirBtn">👍</button>
-  <button id="naoCurtirBtn">👎</button>
-  <span id="feedback-animacao" style="font-size: 2rem; margin-left: 10px;"></span>
-</div>
     <button id="btn-reiniciar" style="display: none;" onclick="reiniciarJogo()">Jogar novamente</button>
     </div>
-  </div>
-<button onclick="mostrarPlanilhaFeedback()" style="display:none;" id="btn-planilha-secreta">Ver Feedbacks</button>
   <script src="dados-prendas.js"></script>
   <script src="dados-perguntas.js"></script>
   <script src="script.js"></script>
-  <script src="feedback.js"></script>
-  <script src="https://cdn.sheetjs.com/xlsx-latest/package/dist/xlsx.full.min.js"></script>
 </body>
 </html>
-
