--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>V e C</h1>
+    <h1>Verdade ou Consequência</h1>
     <section id="cadastro-section">
       <input type="text" id="jogador1" placeholder="Nome do Jogador 1" />
       <input type="text" id="jogador2" placeholder="Nome do Jogador 2" />
@@ -34,8 +34,8 @@
       <div id="nivel-escolhido"></div>
       <div id="vez-do-jogador"></div>
    <div id="escolha-container" style="display: none;" class="escolha-container">
-  <div class="opcao" id="opcao-verdade">V</div>
-  <div class="opcao" id="opcao-consequencia">D</div>
+  <div class="opcao" id="opcao-verdade">Verdade</div>
+  <div class="opcao" id="opcao-consequencia">Consequência</div>
 </div>
       <button id="btn-roleta" onclick="girarRoleta()">Sortear</button>
       <div id="mensagem" class="mensagem"></div>
