--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>V</h1>
+    <h1>Verdade ou Consequência</h1>
 
     <section id="modo-jogo-section">
       <h2>Como você quer jogar?</h2>
@@ -73,8 +73,8 @@
       <div id="vez-do-jogador"></div>
 
       <div id="escolha-container" style="display: none;" class="escolha-container">
-        <div class="opcao" id="opcao-verdade">V</div>
-        <div class="opcao" id="opcao-consequencia">C</div>
+        <div class="opcao" id="opcao-verdade">Verdade</div>
+        <div class="opcao" id="opcao-consequencia">Consequência</div>
       </div>
       
       <div id="mensagem" class="mensagem"></div>
