--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
-  <title>V & C</title>
+  <meta name="description" content="Jogue Verdade ou Consequência online e grátis! Níveis fácil, médio e difícil para animar qualquer date ou festa.">
+  <title>Verdade ou Consequência Online Grátis</title>
 
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-9NRS380CQP"></script>
   <script>
