--- a/index.html
+++ b/index.html
@@ -1,10 +1,22 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8" />
+   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
   <meta name="description" content="Jogue Verdade ou Consequência online e grátis! Níveis fácil, médio e difícil para animar qualquer date ou festa.">
   <title>Verdade ou Consequência Online Grátis</title>
+
+  <link rel="icon" href="imagens/favicon.png" type="image/png">
+  <link rel="apple-touch-icon" href="imagens/logo180.png"> <meta property="og:title" content="Verdade ou Consequência Online Grátis">
+  <meta property="og:description" content="Jogue Verdade ou Consequência online e grátis! Níveis fácil, médio e difícil para animar qualquer date ou festa.">
+  <meta property="og:image" content="http://gamevouc.online/imagens/preview-social.png">
+  <meta property="og:url" content="http://gamevouc.online/">
+  <meta property="og:type" content="website">
+
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Verdade ou Consequência Online Grátis">
+  <meta name="twitter:description" content="Jogue Verdade ou Consequência online e grátis! Níveis fácil, médio e difícil para animar qualquer date ou festa.">
+  <meta name="twitter:image" content="http://gamevouc.online/imagens/preview-social.png">
 
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-9NRS380CQP"></script>
   <script>
@@ -17,7 +29,7 @@
   <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@600&display=swap" rel="stylesheet">
 </head>
-<body>
+<body> 
   <div class="container">
     <h1>Verdade ou Consequência</h1>
 
